--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,9 @@
   --light-dark: #f5f5f5;
   --text-dark: #333333;
   --text-light: #ffffff;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
 :root[data-theme="light"] {
@@ -41,6 +44,13 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(
+        to bottom,
+        transparent,
+        rgb(var(--background-end-rgb))
+      )
+      rgb(var(--background-start-rgb));
   }
 
   body[data-theme="light"] {
