fix middleware routing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@
   --light-dark: #f5f5f5;
   --text-dark: #333333;
   --text-light: #ffffff;
-git    --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
